Adding process signal handlers

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "cmax-pdf2jpeg",
-  "version": "0.9.0",
+  "version": "0.9.1",
   "description": "PDF2JPEG service",
   "main": "dist/run.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "server": "node dist/run.js"
+    "start": "node dist/run.js"
   },
   "author": "bskerlecz@gmail.com",
   "license": "MIT",
